# spectrograph

./: .gitignore  .gitmodules  CMakeLists.txt  build_ocv.sh  readme.md
cmake/: utils.cmake
doc/: Программа.docx
spectr/: CMakeLists.txt
spectr/inc/: capture.h  controller.h  format.h  fps.h  helpers.h  model.h  ocv.h  optlog.h  save_dialog.h  version.h.in  view.h  window.h
spectr/res/: license.txt  manual.md  spectr.rc  spectr.yml
spectr/src/: capture.cpp  controller.cpp  helpers.h  main.cpp  model.cpp  model.h  view.cpp  view.h  window.cpp  window.h
